# Pricing-Engine

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  Pricing Project.md  README.md  Welcome.py  app.py  calculations.py  database_setup.py  docker-compose.yml  local_pricing.db  main.py  nginx.conf  pricing_engine.db  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: local_pricing.db  main.py  models.py  pricing_engine.py  schemas.py  test.db  test_main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: LandingPage.tsx  PricingPage.tsx  ResultsPage.tsx
pages/: 1_Upload_and_Validate.py  2_Calculate_and_Export.py  3_Configure_Pricing_Rules.py
