[project]
name = "pricing-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "httpx==0.27.0",
    "openpyxl==3.1.2",
    "pandas==2.1.3",
    "pytest==8.2.2",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
    "xlrd==2.0.1",
]
